# mjlab_goalkeeper

./: .gitignore  PHASE1_CHANGES.md  README.md  help.txt  play.py  pyproject.toml  sky_task.yaml  train.py
guide/: DEVELOPER_GUIDE.md
src/mjlab_goalkeeper/: __init__.py
src/mjlab_goalkeeper/config/: env_cfg.py  rl_cfg.py
src/mjlab_goalkeeper/entities/: __init__.py  ball.py  cube.py  football_ball.py  goal.py
src/mjlab_goalkeeper/mdp/: __init__.py  commands.py  curriculums.py  events.py  observations.py  rewards.py  terminations.py
src/mjlab_goalkeeper/rl/: __init__.py  exporter.py  runner.py
tests/: test_football_throw.py  test_goal.py  test_goalkeeper_rewards.py  test_goalkeeper_setup.py  test_penalty_kick.py  test_phase1_changes.py
