[project]
name = "mjlab-goalkeeper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["mjlab", "onnxscript>=0.5.4"]

[tool.uv.sources]
mjlab = { git = "https://github.com/julien-blanchon/mjlab" }

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "skypilot[lambda]>=0.10.3.post2",
]

[project.entry-points."mjlab.envs"]
mjlab-goalkeeper = "mjlab_goalkeeper"
